--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,13 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
+	<properties>
+		<docker.image.prefix>kammana</docker.image.prefix>
+		<sonar.host.url>http://18.212.167.110:9000/</sonar.host.url>
+
+	</properties>
+	<dependencies>    
+    
     <build>
         <plugins>
             <plugin>
