--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,12 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
-   
+	<properties>
+		<docker.image.prefix>kammana</docker.image.prefix>
+		<sonar.host.url>http://18.212.167.110:9000/</sonar.host.url>
+
+	</properties>
+    
     <build>
         <plugins>
             <plugin>
