--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,20 @@
 		<sonar.host.url>http://44.202.108.97:9000/</sonar.host.url>
 
 	</properties>
+
+
+	<distributionManagement>
+		 <snapshotRepository>
+		    <id>nexusRepo</id>
+		    <url>http://44.204.161.127:8081/repository/sample-snapshots/</url>
+		 </snapshotRepository>
+		
+		<repository>
+		    <id>nexusRepo</id>
+		    <url>http://44.204.161.127:8081/repository/sample-releases/</url>
+		</repository>
+  	</distributionManagement>
+	
     
     <build>
         <plugins>
