--- a/jenkinsfile
+++ b/jenkinsfile
@@ -13,7 +13,7 @@ pipeline {
 		stage('Build Artifact') {
             steps {
                 echo 'Build Artifact with maven build tool'
-				sh 'mvn clean install'
+				sh 'mvn clean sonar:sonar deploy'
             }
         }
 		
@@ -21,10 +21,8 @@ pipeline {
 		stage('Deploy') {
             steps {
                 echo 'Deploy to tomcat ap/n server '
-				deploy adapters: [tomcat9(credentialsId: 'tomcat-credentials', path: '', url: 'http://3.88.103.180:8081/')], contextPath: 'facebook', war: '**/*.war'
+				deploy adapters: [tomcat9(credentialsId: 'tomcat-credentials', path: '', url: 'http://34.224.5.225:8081/')], contextPath: 'facebook3', war: '**/*.war'
             }
         }
     }
 }
-
-
