--- a/jenkinsfile
+++ b/jenkinsfile
@@ -21,7 +21,7 @@ pipeline {
 		stage('Deploy') {
             steps {
                 echo 'Deploy to tomcat ap/n server '
-				deploy adapters: [tomcat9(credentialsId: 'tomcat-credentials', path: '', url: 'http://34.224.5.225:8081/')], contextPath: 'facebook3', war: '**/*.war'
+				deploy adapters: [tomcat9(credentialsId: 'tomcat', path: '', url: 'http://34.224.5.225:8081/')], contextPath: 'facebook3', war: '**/*.war'
             }
         }
     }
