--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
 	<properties>
 		<docker.image.prefix>kammana</docker.image.prefix>
-		<sonar.host.url>http://localhost:9000/</sonar.host.url>
+		<sonar.host.url>http://3.108.221.249:9000/</sonar.host.url>
 
 	</properties>
 
@@ -18,12 +18,12 @@
 	<distributionManagement>
 		 <snapshotRepository>
 		    <id>nexusRepo</id>
-		    <url>http://http://localhost:8081//repository/batch12-snapshots/</url>
+		    <url>http://http://13.232.232.215:8081//repository/batch12-snapshots/</url>
 		 </snapshotRepository>
 		
 		<repository>
 		    <id>nexusRepo</id>
-		    <url>http://http://localhost:8081//repository/batch12-release/</url>
+		    <url>http://http://13.232.232.215:8081//repository/batch12-release/</url>
 		</repository>
   	</distributionManagement>
 	
