--- a/pom.xml
+++ b/pom.xml
@@ -8,25 +8,22 @@
     <version>3.1</version>
     <packaging>war</packaging>
 
-	<properties>
-		<docker.image.prefix>kammana</docker.image.prefix>
-		<sonar.host.url>http://3.108.221.249:9000/</sonar.host.url>
+    <properties>
+        <docker.image.prefix>kammana</docker.image.prefix>
+        <sonar.host.url>http://3.108.221.249:9000/</sonar.host.url>
+        <sonar.login>squ_c1d68a0b699e3d2bef63b0364745bc9ad3baa0ed</sonar.login>
+    </properties>
 
-	</properties>
-
-
-	<distributionManagement>
-		 <snapshotRepository>
-		    <id>nexusRepo</id>
-		    <url>http://http://13.232.232.215:8081//repository/batch12-snapshots/</url>
-		 </snapshotRepository>
-		
-		<repository>
-		    <id>nexusRepo</id>
-		    <url>http://http://13.232.232.215:8081//repository/batch12-release/</url>
-		</repository>
-  	</distributionManagement>
-	
+    <distributionManagement>
+        <snapshotRepository>
+            <id>nexusRepo</id>
+            <url>http://13.232.232.215:8081/repository/batch12-snapshots/</url>
+        </snapshotRepository>
+        <repository>
+            <id>nexusRepo</id>
+            <url>http://13.232.232.215:8081/repository/batch12-release/</url>
+        </repository>
+    </distributionManagement>
     
     <build>
         <plugins>
@@ -38,7 +35,11 @@
                     <failOnMissingWebXml>false</failOnMissingWebXml>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.sonarsource.scanner.maven</groupId>
+                <artifactId>sonar-maven-plugin</artifactId>
+                <version>4.0.0.4121</version>
+            </plugin>
         </plugins>
     </build>
 </project>
-
